--- a/Projekat/app/src/main/res/values/strings.xml
+++ b/Projekat/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="profile_email_text"><b>E-mail address:</b></string>
     <string name="profile_password_text"><b>Password:</b></string>
     <string name="profile_points_text"><b>Points:</b></string>
+    <string name="profile_friends_username_text"><b>Username:</b></string>
+    <string name="friends_profile_check"><i>Friends</i></string>
 </resources>
